<resources>
    <string name="app_name">FirstFire</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="title_activity_main3">Main3Activity</string>


    <string name="hint_password">enter password</string>
    <string name="btn_sign_up">SignUp</string>
    <string name="btn_link_to_login">Login</string>

    <string name="btn_login">Login</string>
    <string name="btn_link_to_signup">SignUp</string>

    <string name="err_msg_email">Please enter your email</string>
    <string name="err_msg_required">Field required</string>
    <string name="err_msg_password">Please enter your password </string>
    <string name="auth_failed">Authentication error, Please enter a valid email and password or sign up</string>
    <string name="title_activity_list_item">ListItemActivity</string>


</resources>
